--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"watch-poll": "npm run watch -- --watch-poll",
 		"hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
 		"prod": "npm run production",
-		"production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "upgrade-interactive": "npm-check --update",
+        "ui": "npm run upgrade-interactive"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^5.8.1",
@@ -20,6 +22,7 @@
 		"browser-sync-webpack-plugin": "2.2.2",
 		"cross-env": "^5.2.0",
 		"laravel-mix": "^4.0.15",
+		"npm-check": "^5.9.0",
 		"sass": "^1.17.3",
 		"sass-loader": "^7.1.0",
 		"vue-template-compiler": "^2.6.10"
